# notmuch-haskell

./: .gitignore  Action.hs  Database.hs  Main.hs  Makefile  NotmuchTest.hs  Parse.hs  README.build  README.md  jmh.cabal  notmuch-haskell.cabal
Foreign/: NOTMUCH_H.hsc
